<resources>
    <string name="app_name">Vai Ali Pra Mim</string>
    <string name="title_activity_mapa">Mapa</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="nome_cad">Nome Completo</string>
    <string name="cadastro">CADASTRO</string>
    <string name="data_cad">Data de Nascimento</string>
    <string name="cpf_cad">CPF</string>
    <string name="email_cad">Email</string>
    <string name="msg_confirmacaoEmail">Foi enviado um código de verificação para:  </string>
    <string name="msg_insrecaoEmail">Insira o código recebido abaixo  </string>
    <string name="senha_cad">Senha</string>
    <string name="confSenha_cad">Confirmar Senha</string>
    <string name="Telefone_cad">Telefone</string>
    <string name="check_cad">Deseja ser entregador?</string>
    <string name="home">Home</string>
    <string name="edit_perf">Editar perfil</string>
    <string name="conf">Configurações</string>
    <string name="solicitacão_aceita">Solicitação foi aceita</string>
    <string name="solicitacão_recusada">Solicitação foi recusada</string>
    <string name="solicitação_esperando_resposta">Esperando resposta</string>
    <string name="clique_para_solicitar">Clique para solicitar</string>
    <string name="nao_entregadores_proximos">Não há entregadores por perto</string>
    <string name="nao_ha_tarefas_pendentes">Você não tem tarefas pendentes</string>
    <string name="text_valor_total">Valor total</string>
    <string name="taxa_entrega">Taxa de entrega</string>
    <string name="fechar">Fechar</string>
    <string name="term">Termos e condições</string>
    <string name="faq">FAQ</string>
    <string name="logout">Sair</string>
    <string name="aval">Nos avalie</string>
    <string name="perfil">Perfil</string>
    <string name="nav_fechar">Fechar</string>
    <string name="nav_abrir">Abrir</string>
    <string name="nome_user">Usuário Nome</string>
    <string name="saldo_user">R$ 17,00</string>
    <string name="ent_pen">Entregas Pendentes</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string-array name="mes_ano">
        <item>Janeiro</item>
        <item>Fevereiro</item>
        <item>Março</item>
        <item>Abril</item>
        <item>Maio</item>
        <item>Junho</item>
        <item>Julho</item>
        <item>Agosto</item>
        <item>Setembro</item>
        <item>Outubro</item>
        <item>Novembro</item>
        <item>Dezembro</item>

    </string-array>
    <string name="data_ped">DATA PEDIDO</string>
    <string name="preco_priItem">PRECO PRIMEIRO ITEM</string>
    <string name="preco_segItem">PRECO SEGUNDO ITEM</string>
    <string name="aceitar">Aceitar</string>
    <string name="rejeitar">Rejeitar</string>
    <string name="valor_total">valor total compras: R$2330.00</string>
</resources>