<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_fragment_pedido"
        android:layout_width="341dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/style_view_baldes"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/perfil" />

            <TextView
                android:id="@+id/tv_nome_solicitante"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/baloo"
                android:gravity="center"
                android:text="José Santana"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_data_pedido"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/baloo"

            android:gravity="center"
            android:text="@string/data_ped"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="195dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_primeiro_item_pedido"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/baloo"
                    android:text="- 1kg Farinha Dona Benta"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/tv_preco_primeiro_item"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/preco_priItem"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/tv_segundo_item_pedido"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"

                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/baloo"
                    android:text="- 6 paes"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/tv_preco_segundo_item"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/baloo"
                    android:text="@string/preco_segItem"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="23sp" />

                <TextView
                    android:id="@+id/tv_valor_total_compras"
                    android:layout_width="330dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"

                    android:fontFamily="@font/baloo"
                    android:text="@string/valor_total"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="23sp" />


            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp">

            <Button
                android:id="@+id/bt_aceitar_pedido"
                android:layout_width="145dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:background="@drawable/style_view_baldes"
                android:fontFamily="@font/baloo"
                android:text="@string/aceitar"
                android:textSize="16dp" />

            <Button
                android:id="@+id/bt_rejeitar_pedido"
                android:layout_width="145dp"
                android:layout_height="match_parent"
                android:background="@drawable/style_view_baldes"
                android:layout_marginLeft="15dp"
                android:fontFamily="@font/baloo"
                android:text="@string/rejeitar"
                android:textSize="16dp" />

        </LinearLayout>


    </LinearLayout>

</FrameLayout>